btn display to block to try and fix overlap

--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ a:hover {
   margin-top: 20px;
   padding: 15px 20px;
   border-radius: 4px;
+  display: block;
 }
 
 .btn-purple:hover {
